<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">WorkDaysTarget</string>
	<string name="monday">Mo</string>
	<string name="mondayDesc">Monday</string>
	<string name="tuesday">Tu</string>
	<string name="tuesdayDesc">Tuesday</string>
	<string name="wednesday">We</string>
	<string name="wednesdayDesc">Wednesday</string>
	<string name="thursday">Th</string>
	<string name="thursdayDesc">Thursday</string>
	<string name="friday">Fr</string>
	<string name="fridayDesc">Friday</string>
	<string name="saturday">Sa</string>
	<string name="saturdayDesc">Saturday</string>
	<string name="sunday">Su</string>
	<string name="sundayDesc">Sunday</string>
	<string name="holidays">Ho</string>
	<string name="holidaysDesc">Holidays</string>
	<string name="descServicePermission">Permission to access DaysLeftService.</string>
	<string name="ok_button">Save</string>
	<string name="cancel_button">Cancel</string>
	<string name="unit">days</string>
	
	<!-- Tooltip checked and unchecked -->
	<string name="unchecked">unchecked</string>
	<string name="checked">checked</string>
	
	<string name="back_desc">Target background.</string>
</resources>