<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".ConfigActivity" >
	<DatePicker
		android:id="@+id/targetDateChooser"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:calendarViewShown="false" />
	<GridLayout
		android:id="@+id/checkedDays"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/targetDateChooser"
		android:columnCount="4"
		android:rowCount="2" >
		<CheckBox
			android:id="@+id/chkMonday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/monday" />
		<CheckBox
			android:id="@+id/chkTuesday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/tuesday" />
		<CheckBox
			android:id="@+id/chkWednesday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/wednesday" />
		<CheckBox
			android:id="@+id/chkThursday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/thursday" />
		<CheckBox
			android:id="@+id/chkFriday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="true"
			android:text="@string/friday" />
		<CheckBox
			android:id="@+id/chkSaturday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/saturday" />
		<CheckBox
			android:id="@+id/chkSunday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/sunday" />
		<CheckBox
			android:id="@+id/chkHoliday"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checked="false"
			android:text="@string/holidays" />
	</GridLayout>
	<LinearLayout
		style="?android:attr/buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/checkedDays"
		android:orientation="horizontal" >
		<Button
			android:id="@+id/cancelButton"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/cancel_button" />
		<Button
			android:id="@+id/okButton"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:hapticFeedbackEnabled="true"
			android:text="@string/ok_button" />
	</LinearLayout>
</RelativeLayout>